# budget-mcp-server

./: .env.template  .gitignore  =1.2.0  AGENTS.md  ApplicationStructure.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HTTPS_SETUP.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_stdio.py  setup-env.sh  test_db
.github/instructions/: coding.instructions.md
app/: __init__.py  auth.py  cli.py  config.py  fastmcp_server.py  mcp_server.py
app/api/: envelopes.py  transactions.py
app/mcp/: envelope_tools.py  registry.py  transaction_tools.py  utility_tools.py
app/models/: database.py  database_types.py
app/services/: envelope_service.py  transaction_service.py
app/tools/: __init__.py  handlers.py  registry.py  schemas.py
app/utils/: auth.py  error_handlers.py  version.py
certs/: server.crt  server.key
nginx/: nginx.conf  nginx.conf.backup  nginx.conf.template
plans/: HTTPS_DOCKER_FIX_PLAN.md
scripts/: generate_cert.py  get_pr_comments.py
tests/: conftest.py  test_auth.py  test_config_auth.py  test_config_enum_integration.py  test_database_enum_integration.py  test_database_motherduck_cloud.py  test_database_types.py  test_fastmcp_auth.py  test_fastmcp_initialization_integration.py  test_fastmcp_tools.py  test_mcp_initialization_middleware.py  test_mcp_prompts.py  test_mcp_tools.py  test_motherduck_integration.py  test_motherduck_real_integration.py  test_version.py
tests/test_api/: test_envelopes_api.py  test_transactions_api.py
tests/test_models/: test_database.py
tests/test_services/: test_envelope_service.py  test_transaction_service.py
tests/test_tools/: test_registry.py
