[project]
name = "budget-mcp-server"
version = "0.1.0"
description = "Budget Cash Envelope MCP Server - A cash envelope budgeting system for AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.8.0",
    "fastmcp>=2.3.0",
    "mcp>=1.9.4",
    "fastapi>=0.104.0", # Required for auth middleware
]

[project.scripts]
budget-mcp-server = "app.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
