[project]
name = "budget-mcp-server"
version = "0.2.0"
description = "Budget Cash Envelope MCP Server - A cash envelope budgeting system for AI assistants"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.8.0",
    "fastmcp>=2.3.0",
    "mcp>=1.9.4",
    "fastapi>=0.104.0", # Required for auth middleware
]

[project.scripts]
budget-mcp-server = "app.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-cov>=6.2.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | data
  | certs
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["data", "certs", ".git", ".mypy_cache", ".pytest_cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
# Exclude standalone integration test scripts
norecursedirs = ["data", "certs", ".git", ".mypy_cache", ".pytest_cache", ".venv"]
markers = [
    "integration: marks tests as integration tests that may require external dependencies",
    "unit: marks tests as isolated unit tests with no external dependencies",
    "motherduck: marks tests that require MotherDuck cloud connectivity",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["data/", "certs/", "build/", "dist/", ".*\\.egg-info/"]

[tool.setuptools.packages.find]
include = ["app*"]
